SI: Fixed overflow issue with user-info getting large

--- a/github-profiles-app/style.css
+++ b/github-profiles-app/style.css
@@ -130,8 +130,7 @@ main {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
-    overflow: visible;
+    overflow: hidden;
 }
 
 .user-info h3 {
